@@ -1,3 +1,8 @@
+2009-08-06	Xi Yang <hiyangxi@gmail.com>
+
+	* pxa255/clock/clock.c: Adjust clock for Skyeye. Joel added empty
+	nanoseconds since last tick handler.
+
 2009-08-04	Xi Yang <hiyangxi@gmail.com>
 
 	* pxa255/clock/clock.c: Move parentheses to improve math. More tests
